added intro section to website, resized background image and added css codes

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -1,3 +1,4 @@
 @import "./Template/Config.css";
 @import "./Template/Menu.css";
 @import "./Template/Swiper.css";
+@import "./Template/./Intro.css";
