added product.css to project and added product section to website

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -2,3 +2,4 @@
 @import "./Template/Menu.css";
 @import "./Template/Swiper.css";
 @import "./Template/./Intro.css";
+@import "./Template/./Product.css";
