added video to website

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -3,3 +3,4 @@
 @import "./Template/Swiper.css";
 @import "./Template/./Intro.css";
 @import "./Template/./Product.css";
+@import "./Template/./Video.css";
