added gallery section to website

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -4,3 +4,4 @@
 @import "./Template/./Intro.css";
 @import "./Template/./Product.css";
 @import "./Template/./Video.css";
+@import "./Template/./Gallery.css";
