--- a/Css/Template/Video.css
+++ b/Css/Template/Video.css
@@ -1,16 +1,34 @@
 div.video {
   width: 100%;
   height: 600px;
-  padding-top: 100px;
   background-image: url(../../Images/ParaVideo.jpg);
   background-position: top;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 }
 
-div.video > video {
+div.video > p {
+  width: 70%;
+  height: inherit;
+  padding: 60px 0px;
+}
+
+div.video > p > video {
   display: block;
   width: 720px;
   height: 405px;
-  margin: 0px 200px;
+  margin: 0px auto;
+}
+
+div.video > p > a {
+  display: block;
+  width: inherit;
+  margin: 0 auto;
+  padding-top: 20px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: #b4a5a5;
+  text-align: center;
 }
