added a contact section to website

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -5,3 +5,4 @@
 @import "./Template/./Product.css";
 @import "./Template/./Video.css";
 @import "./Template/./Gallery.css";
+@import "./Template/./contact.css";
