added social and design sections to website

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -6,3 +6,4 @@
 @import "./Template/./Video.css";
 @import "./Template/./Gallery.css";
 @import "./Template/./contact.css";
+@import "./Template/./Social.css";
