I changed file's name

--- a/Css/Main.css
+++ b/Css/Main.css
@@ -1,9 +1,9 @@
-@import "./Template/Config.css";
-@import "./Template/Menu.css";
-@import "./Template/Swiper.css";
-@import "./Template/./Intro.css";
-@import "./Template/./Product.css";
-@import "./Template/./Video.css";
-@import "./Template/./Gallery.css";
-@import "./Template/./contact.css";
-@import "./Template/./Social.css";
+@import "./template/config.css";
+@import "./template/menu.css";
+@import "./template/swiper.css";
+@import "./template/./intro.css";
+@import "./template/./product.css";
+@import "./template/./video.css";
+@import "./template/./gallery.css";
+@import "./template/./contact.css";
+@import "./template/./social.css";
